maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:45: error: x is already defined as value x
def indicationCaseAdjacente(n:Int, x:Int, x:Int) = {
                                          ^JediEscaper:46: error: not found: value y
  if (getIndication(x, y-1) == 9999 && !aMurNord(x, y)) {
                       ^JediEscaper:46: error: not found: value y
  if (getIndication(x, y-1) == 9999 && !aMurNord(x, y)) {
                                                    ^JediEscaper:47: error: not found: value y
      setIndication(x, y-1, cpt)
                       ^JediEscaper:47: error: not found: value cpt
      setIndication(x, y-1, cpt)
                            ^JediEscaper:48: error: not found: value y
    }; if (getIndication(x-1, y) == 9999 && !aMurOuest(x, y)) {
                              ^JediEscaper:48: error: not found: value y
    }; if (getIndication(x-1, y) == 9999 && !aMurOuest(x, y)) {
                                                          ^JediEscaper:49: error: not found: value y
      setIndication(x-1, y, cpt)
                         ^JediEscaper:49: error: not found: value cpt
      setIndication(x-1, y, cpt)
                            ^JediEscaper:50: error: not found: value y
    }; if (y < getMondeHauteur()-1 && getIndication(x, y+1) == 9999 &&  !aMurNord(x, y+1)) {
           ^JediEscaper:50: error: not found: value y
    }; if (y < getMondeHauteur()-1 && getIndication(x, y+1) == 9999 &&  !aMurNord(x, y+1)) {
                                                       ^JediEscaper:50: error: not found: value y
    }; if (y < getMondeHauteur()-1 && getIndication(x, y+1) == 9999 &&  !aMurNord(x, y+1)) {
                                                                                     ^JediEscaper:51: error: not found: value y
      setIndication(x, y+1, cpt)
                       ^JediEscaper:51: error: not found: value cpt
      setIndication(x, y+1, cpt)
                            ^JediEscaper:52: error: not found: value y
    }; if (x < getMondeLargeur()-1 && getIndication(x+1, y) == 9999 &&  !aMurOuest(x+1, y)) {
                                                         ^JediEscaper:52: error: not found: value y
    }; if (x < getMondeLargeur()-1 && getIndication(x+1, y) == 9999 &&  !aMurOuest(x+1, y)) {
                                                                                        ^JediEscaper:53: error: not found: value y
      setIndication(x+1, y, cpt)
                         ^JediEscaper:53: error: not found: value cpt
      setIndication(x+1, y, cpt)
                            ^