maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
  var posXBiscuit:Int = 0
  var posYBiscuit:Int = 0
  var cpt:Int = 0
  
  while (!aBiscuit(posXBiscuit, posYBiscuit)) {
    if (posXBiscuit == getMondeLargeur() - 1) {
      posXBiscuit = 0
      posYBiscuit += 1
    } else {
      posXBiscuit += 1
    }
  } // On a la position du biscuit
  
  var posXNote:Int = posXBiscuit
  var posYNote:Int = posYBiscuit
  
  setIndication(posXNote, posYNote, cpt)			 //On marque 0 à la sortie
  
  while (casesLibres()) {
    for (x <- 0 to getMondeLargeur()-1) {
      for (y <- 0 to getMondeHauteur()-1) {
        if (getIndication(x,y) == cpt) {
          indicationCaseAdjacente(cpt+1, x, y)
        }
      }
    }
    cpt += 1
  }
}

def casesLibres():Boolean = {
  // Retourne s'il reste des cases libres dans la grille
  for (x <- 0 to getMondeLargeur()-1) {
    for (y <- 0 to getMondeHauteur()-1) {
      if (getIndication(x,y)==9999) {
        return true
      }
    }
  }
  return false
}

def indicationCaseAdjacente(n:Int, x:Int, x:Int) = {
  if (getIndication(x, y-1) == 9999 && !aMurNord(x, y)) {
      setIndication(x, y-1, cpt)
    }; if (getIndication(x-1, y) == 9999 && !aMurOuest(x, y)) {
      setIndication(x-1, y, cpt)
    }; if (y < getMondeHauteur()-1 && getIndication(x, y+1) == 9999 &&  !aMurNord(x, y+1)) {
      setIndication(x, y+1, cpt)
    }; if (x < getMondeLargeur()-1 && getIndication(x+1, y) == 9999 &&  !aMurOuest(x+1, y)) {
      setIndication(x+1, y, cpt)
    }
}